fix(responsiveUI): go with a less is more approach on mobile, add some spacing to tx-addrs on tablet sized resolutions

--- a/assets/css/components/_activity-feed.scss
+++ b/assets/css/components/_activity-feed.scss
@@ -45,3 +45,7 @@
 @media (min-width: 990px) and (max-width: 1175px) {
   .af-date { display: none; }
 }
+
+@media (max-width: 620px) {
+  .af-log span { display: none; }
+}
